# Priority: Critical
# Test ID: C000032
# Title: Archive wallets
# Expected Result:
#   1. Archive wallets is functional
#   2. Unable to archive last wallet
#   3. Restore wallets is functional
#   4. Restore button at bottom of wallet list


appId: ${MAESTRO_APP_ID}
tags:
- all
- C000032
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/create-account.yaml
- runFlow:
    file: ../common/dismiss-modals.yaml


# Archive wallets
- evalScript: ${output.walletNames = ["My Bitcoin", "My Bitcoin Cash", "My Dash", "My Ether", "My Litecoin"]}
- evalScript: ${output.index = 0}
- tapOn: Assets
- repeat:
    times: ${output.walletNames.length - 1}
    commands:
      - tapOn: ${".*" + output.walletNames[output.index]}
      - tapOn: 
          id: gearIcon
      - tapOn: ".*Archive Wallet"
      # Modal
      - assertVisible: "Archive Wallet"
      - assertVisible: ${"Are you sure you want to archive " + output.walletNames[output.index] + "?"}
      - assertVisible: Cancel
      # Check if "My Ether" wallet
      - runFlow:
          when:
            true: ${output.walletNames[output.index] == "My Ether"}
          commands: 
            - assertVisible: "Archiving this wallet will also archive any enabled tokens for this wallet."
          label: "Extra message for Ether wallets"
      # Archive
      - tapOn: Archive
      - assertNotVisible: ${".*" + output.walletNames[output.index]}
      
      - evalScript: ${output.index++}
    label: "Archive all wallets except last"

# Unable to archive last wallet
- runFlow:
    commands: 
      - longPressOn: ${".*" + output.walletNames[output.index]}
      - tapOn: ".*Archive Wallet"
      - assertVisible: "Cannot Archive Wallet"
      - assertVisible: "At least one wallet required in this account."
      - assertVisible: "If you'd like to archive this wallet, you'll need to add an additional wallet to this account."
      - assertVisible:
          id: "modal-close-button"
      - tapOn: "OK"
    label: "Unable to archive last wallet"

# Restore button at bottom of wallet list
- scrollUntilVisible:
    element: Restore Wallets
    direction: DOWN

# Restore from settings
- tapOn:
    id: sideMenuButton
- tapOn: Settings
- scrollUntilVisible:
    element: Restore Wallets
    centerElement: true
    direction: DOWN
- tapOn: Restore Wallets
- assertVisible: "Restore Wallets"

# Toggle on wallets to restore
- evalScript: ${output.walletCurrencyCodes = ["BTC", "BCH", "DASH", "ETH", "LTC"]}
- evalScript: ${output.index = 0}
- repeat:
    times: ${output.walletCurrencyCodes.length - 1}
    commands:
      - tapOn: ${output.walletCurrencyCodes[output.index]}
      - evalScript: ${output.index++}
- tapOn: Restore

# Modal
- assertVisible: Restore Wallets
- assertVisible: This will restore all selected wallets
- assertVisible: Cancel
- tapOn: Confirm

# Confirm restored and returned to assets screen
- assertVisible: "Total Balance.*"
- evalScript: ${output.index = 0}
- repeat:
    times: ${output.walletNames.length}
    commands:
      - scrollUntilVisible:
          element: ${".*" + output.walletNames[output.index]}
          direction: DOWN
      - evalScript: ${output.index++}

# Ensure restore is not tappable when none left to restore
- tapOn:
    id: sideMenuButton
- tapOn: Settings
- scrollUntilVisible:
    element: Restore Wallets
    direction: DOWN
    centerElement: true
- tapOn: Restore Wallets
# Search bar appears on next scene only if wallets exist to restore
- assertNotVisible: Search Wallets
