# Priority: Critical
# Test ID: C000044
# Title: Create all wallet types
# Expected Result:
#   1. User can create wallets for all primary asset types
#   2. Checks for alerts and errors

# Note: Can be disabled once other test uses the subflow

appId: ${MAESTRO_APP_ID}
tags:
- all
- C000044
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/create-account.yaml
    env:
      NEW_WALLETS: ${'["Bitcoin"]'}
- runFlow:
    file: ../common/dismiss-modals.yaml

- tapOn: Assets
- runFlow:
    file: ../common/add-all-wallet-types.yaml

- runFlow:
    file: ../common/no-errors.yaml

# Validate that all wallets were created
- evalScript: ${output.index = 0}
- evalScript: ${output.walletNames = JSON.parse(output.assetNames)}
- repeat:
    times: ${output.walletNames.length}
    commands:      
      # option 1
      # Preferred quicker method, but iOS wallet search is not currently reliable when maestro types too fast
    #   - tapOn:
    #       id: "undefined.textInput"
    #   - tapOn:
    #       id: "undefined.clearIcon"
    #   - inputText: ${walletNames[index]}
    #   - assertVisible: ${"My .*"}
      
      # Option 2
      # Wallet nickname often excludes extra words (e.g. "Pirate Chain" -> "My Pirate")
      - evalScript: ${output.nickName = ".*My " + output.walletNames[output.index].split(" ")[0] + ".*"}
      # Hack to address inconsistent wallet name for XRP
      - evalScript: ${if (output.walletNames[output.index] === "XRPL") { output.nickName = ".*My XRP"}}
      - retry:
          maxRetries: 2
          commands:
            - scrollUntilVisible:
                element: "Wallets"
                direction: UP
                speed: 150
                timeout: 30000
            - scrollUntilVisible:
                element: ${output.nickName}
                centerElement: true
                timeout: 60000
                speed: 5

      - evalScript: ${output.index++}
